Add Teacher to Booking in Backend

--- a/module/Backend/view/backend/booking/edit.phtml
+++ b/module/Backend/view/backend/booking/edit.phtml
@@ -120,6 +120,7 @@ $this->setup(array(
                     <table class="default-table">
                         <?= $this->formRowCompact($form, 'bf-sid') ?>
                         <?= $this->formRowCompact($form, 'bf-status-billing') ?>
+                        <?= $this->formRowCompact($form, 'bf-teacher') ?>
                         <?= $this->formRowCompact($form, 'bf-quantity') ?>
                     </table>
                 </div>
