disable multiple identical booking from same person
todo:
- konfigurierbar machen in den Einstellungen des jeweiligen Angebots
- Häkchen "Mehrfachbuchungen durch selbe Person"

--- a/module/Square/view/square/square/index.own.phtml
+++ b/module/Square/view/square/square/index.own.phtml
@@ -14,7 +14,7 @@ foreach ($this->bookingsFromUser as $bid => $booking) {
     }
 }
 
-if ($this->bookable) {
+if ($this->bookable && false) {
     echo sprintf('<p><span class="green">' . $this->t('This %s is still free.') . '</span></p>', $squareType);
 
     $url = $this->url('square', [], ['query' => [
