--- a/module/User/view/user/account/registration.phtml
+++ b/module/User/view/user/account/registration.phtml
@@ -95,6 +95,7 @@ $this->headScript()->appendFile($this->basePath('js/controller/user/registration
                             <?= $this->formElementErrors($form->get('rf-lastname')) ?>
                         </td>
                     </tr>
+                <?php if ($this->option('service.user.registration.street') == 'true'): ?>
                     <tr>
                         <td class="default-form-label-row">
                             <?= $this->formLabel($form->get('rf-street')) ?>
@@ -106,6 +107,8 @@ $this->headScript()->appendFile($this->basePath('js/controller/user/registration
                             <?= $this->formElementErrors($form->get('rf-number')) ?>
                         </td>
                     </tr>
+                <?php endif; ?>
+                <?php if ($this->option('service.user.registration.city') == 'true'): ?>
                     <tr>
                         <td class="default-form-label-row">
                             <?= $this->formLabel($form->get('rf-zip')) ?>
@@ -117,6 +120,7 @@ $this->headScript()->appendFile($this->basePath('js/controller/user/registration
                             <?= $this->formElementErrors($form->get('rf-city')) ?>
                         </td>
                     </tr>
+                <?php endif; ?>
 
                     <?= $this->formRowDefault($form, 'rf-phone') ?>
                 </table>
