--- a/module/Square/view/square/square/index.own.phtml
+++ b/module/Square/view/square/square/index.own.phtml
@@ -24,7 +24,16 @@ if ($this->bookable) {
         'te' => $this->dateEnd->format('H:i'),
         's' => $this->square->need('sid'),
         'f' => 'fb']]);
+}
 
+    foreach ($this->reservations as $rid => $reservation):
+        echo"<p>";
+            echo "<b>" . $this->timeRange($reservation->get('time_start'), $reservation->get('time_end'), '%s to %s') . "</b>";
+            echo " " . $this->t('from') . " " . $reservation->getExtra('booking')->getExtra('user')->get('alias');
+        echo "</p>";
+    endforeach;
+
+if ($this->bookable) {
     echo sprintf('<p><a href="%s" class="default-button squarebox-internal-link"><span class="symbolic symbolic-plus">%s</span></a></p>',
         $url, $this->t('Book more'));
 }
