Add Constructions to Booking
Add Constructions to Booking

css anpassung

Add Constructions to Booking

add js

Update BookingController.php

--- a/module/Backend/view/backend/booking/edit.phtml
+++ b/module/Backend/view/backend/booking/edit.phtml
@@ -122,6 +122,7 @@ $this->setup(array(
                         <?= $this->formRowCompact($form, 'bf-status-billing') ?>
                         <?= $this->formRowCompact($form, 'bf-teacher') ?>
                         <?= $this->formRowCompact($form, 'bf-quantity') ?>
+                        <?= $this->formRowCompact($form, 'bf-constructions') ?>
                     </table>
                 </div>
             </td>
