--- a/module/Backend/view/backend/booking/edit.phtml
+++ b/module/Backend/view/backend/booking/edit.phtml
@@ -121,6 +121,7 @@ $this->setup(array(
                         <?= $this->formRowCompact($form, 'bf-sid') ?>
                         <?= $this->formRowCompact($form, 'bf-status-billing') ?>
                         <?= $this->formRowCompact($form, 'bf-quantity') ?>
+                        <?= $this->formRowCompact($form, 'bf-constructions') ?>
                     </table>
                 </div>
             </td>
