--- a/module/Square/view/square/square/index.occupied.phtml
+++ b/module/Square/view/square/square/index.occupied.phtml
@@ -9,3 +9,13 @@ if ($this->notBookableReason) {
 }
 
 echo sprintf('<p><span class="red">' . $reason . '</span></p>', $squareType);
+
+foreach ($this->reservations as $rid => $reservation):
+    echo"<p>";
+        echo "<b>" . $this->timeRange($reservation->get('time_start'), $reservation->get('time_end'), '%s to %s') . "</b>";
+        echo " " . $this->t('from') . " " . $reservation->getExtra('booking')->getExtra('user')->get('alias');
+        if ($reservation->getExtra('booking')->getMeta('constructions') == 1) {
+            echo " " . "(mit Aufbauten)";
+        }
+    echo "</p>";
+endforeach;
