--- a/module/Square/view/square/square/index.own.phtml
+++ b/module/Square/view/square/square/index.own.phtml
@@ -25,6 +25,16 @@ if ($this->bookable) {
         's' => $this->square->need('sid'),
         'f' => 'fb']]);
 
+    foreach ($this->reservations as $rid => $reservation):
+        echo"<p>";
+            echo "<b>" . $this->timeRange($reservation->get('time_start'), $reservation->get('time_end'), '%s to %s') . "</b>";
+            echo " " . $this->t('from') . " " . $reservation->getExtra('booking')->getExtra('user')->get('alias');
+            if ($reservation->getExtra('booking')->getMeta('constructions') == 1) {
+                echo " " . "(mit Aufbauten)";
+            }
+        echo "</p>";
+    endforeach;
+
     echo sprintf('<p><a href="%s" class="default-button squarebox-internal-link"><span class="symbolic symbolic-plus">%s</span></a></p>',
         $url, $this->t('Book more'));
 }
