--- a/module/Square/view/square/square/index.occupied.phtml
+++ b/module/Square/view/square/square/index.occupied.phtml
@@ -9,3 +9,27 @@ if ($this->notBookableReason) {
 }
 
 echo sprintf('<p><span class="red">' . $reason . '</span></p>', $squareType);
+
+foreach ($this->reservations as $rid => $reservation):
+    echo"<p>";
+        echo "<b>" . $this->timeRange($reservation->get('time_start'), $reservation->get('time_end'), '%s to %s') . "</b>";
+        echo " " . $this->t('from') . " " . $reservation->getExtra('booking')->getExtra('user')->get('alias');
+
+        $booking = $reservation->getExtra('booking');
+        $playerNames = $booking->getMeta('player-names');
+        $playerNameNotes = '';
+        if ($playerNames) {
+            $playerNamesUnserialized = @unserialize($booking->getMeta('player-names'));
+            if ($playerNamesUnserialized && is_array($playerNamesUnserialized)) {
+                foreach ($playerNamesUnserialized as $i => $playerName) {
+                    $playerNameNotes .= ' & ' . $playerName['value'];
+                }
+            }
+        }
+        echo $playerNameNotes;
+
+        if ($booking->getMeta('teacher') == 1) {
+            echo " " . $this->t('(with teacher)');
+        }
+    echo "</p>";
+endforeach;
