--- a/module/Backend/view/backend/config-square/edit.phtml
+++ b/module/Backend/view/backend/config-square/edit.phtml
@@ -61,6 +61,7 @@ $this->headScript()->appendFile($this->basePath('js/controller/backend/config-sq
             <?= $this->formRowDefault($form, 'cf-range-cancel') ?>
             <?= $this->formRowCheckbox($form, 'cf-current-time-block-bookable') ?>
             <?= $this->formRowCheckbox($form, 'cf-current-time-block-cancelable') ?>
+            <?= $this->formRowDefault($form, 'cf-max-teachers') ?>
 	        <?= $this->formRowDefault($form, 'cf-label-free') ?>
 
             <?php if ($this->square): ?>
