--- a/module/Square/view/square/square/index.own.phtml
+++ b/module/Square/view/square/square/index.own.phtml
@@ -34,6 +34,30 @@ if ($this->bookable) {
     endforeach;
 
 if ($this->bookable) {
+    foreach ($this->reservations as $rid => $reservation):
+        echo"<p>";
+            echo "<b>" . $this->timeRange($reservation->get('time_start'), $reservation->get('time_end'), '%s to %s') . "</b>";
+            echo " " . $this->t('from') . " " . $reservation->getExtra('booking')->getExtra('user')->get('alias');
+
+            $booking = $reservation->getExtra('booking');
+            $playerNames = $booking->getMeta('player-names');
+            $playerNameNotes = '';
+            if ($playerNames) {
+                $playerNamesUnserialized = @unserialize($booking->getMeta('player-names'));
+                if ($playerNamesUnserialized && is_array($playerNamesUnserialized)) {
+                    foreach ($playerNamesUnserialized as $i => $playerName) {
+                        $playerNameNotes .= ' & ' . $playerName['value'];
+                    }
+                }
+            }
+            echo $playerNameNotes;
+
+            if ($booking->getMeta('teacher') == 1) {
+                echo " " . $this->t('(with teacher)');
+            }
+       echo "</p>";
+    endforeach;
+
     echo sprintf('<p><a href="%s" class="default-button squarebox-internal-link"><span class="symbolic symbolic-plus">%s</span></a></p>',
         $url, $this->t('Book more'));
 }
