Consider simultaneous Number of Teachers, deactiveate for 0

--- a/module/Square/view/square/booking/customization.phtml
+++ b/module/Square/view/square/booking/customization.phtml
@@ -32,9 +32,11 @@ echo $this->ajaxAwareScript('js-client/controller/square/booking/customization.j
         <?= $this->squareQuantityChoice($square, $this->bookings) ?>
     </div>
 
-    <div class="sandbox">
-        <?= $this->squareTeacherChoice($square, $this->bookings) ?>
-    </div>
+    <?php if ($square->getMeta('max_teachers') > 0): ?>
+        <div class="sandbox">
+            <?= $this->squareTeacherChoice($square, $this->bookings) ?>
+        </div>
+    <?php endif; ?>
 
     <div class="separator separator-line"></div>
 
